mobile-menu work in progress

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="First HTML class" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Piotr Wesołowski" />
-    <title>Zadanie domowe#7</title>
+    <title>Zadanie domowe#8</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,10 +22,16 @@
   </head>
 
   <body>
+
+<div class="mobile-menu display-none">
+<button class="mobile-menu__button">X</button>
+
+</div>
+
     <header class="header">
       <div class="container">
         <div class="header__content">
-          <a class="header__logo" href="index.html">
+          <a class="header__logo">
             <span class="header__logo-web">Web</span>
             <span class="header__logo-studio">Studio</span>
           </a>
@@ -266,7 +272,7 @@
                   height="294"
                   alt="woman hands holding tablet over desk"
                 />
-                              </>
+                              </div>
             </ul>
           </div>
         </div>
@@ -552,6 +558,7 @@
       </div>
     </footer>
 <script src="./js/modal.js"></script>
+<script src="./js/mmobile-menu.js"></script>
   </body>
 </html>
 
