--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
       </div>
     </footer>
 <script src="./js/modal.js"></script>
-<script src="./js/mmobile-menu.js"></script>
+<script src="./js/mobile-menu.js"></script>
   </body>
 </html>
 
