--- a/index.html
+++ b/index.html
@@ -23,8 +23,43 @@
 
   <body>
 
-<div class="mobile-menu display-none">
-<button class="mobile-menu__button">X</button>
+    <div class="mobile-menu display-none">
+  <button class="mobile-menu__button">X</button>
+<div class="mobile-menu__content">
+ 
+  <ul class="mobile-menu__links">
+    <li><a class="mobile-menu__links-agency mobile-menu-agency--active" href="index.html">Agencja</a></li>
+    <li><a class="mobile-menu__links-portfolio" href="./portfolio.html">Portfolio</a></li>
+    <li><a class="mobile-menu__links-contact" href="Kontakt">Kontakt</a></li>
+  </ul>
+
+  <ul class="mobile-menu__contact">
+    <li>
+      <a
+        class="mobile-menu__contact-element mobile-menu__contact-element--transformation"
+        href="mailto:info@devstudio.com"
+      >
+        <!-- <svg width="16" height="12">
+          <use href="./images/icons.svg#icon-envelope"></use>
+        </svg> -->
+        info@devstudio.com</a
+      >
+    </li>
+
+    <li>
+      <a
+        class="mobile-menu__contact-element mobile-menu__contact-element--transformation"
+        href="phone:+48111111111"
+      >
+        <!-- <svg width="10" height="16">
+          <use href="./images/icons.svg#icon-smartphone"></use>
+        </svg> -->
+        +48 111 111 111</a
+      >
+    </li>
+  </ul>
+</div>
+</div>
 
 </div>
 
