--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
   <body>
 
     <div class="mobile-menu display-none">
-  <button class="mobile-menu__button">X</button>
-<div class="mobile-menu__content">
+      <button type="button" class="mobile-menu__button">
+        <svg height="18" width="18">
+            <use href="./images/icons.svg#icon-close_mobile"></use>
+          </svg>
+      </button>
+  
+<!-- <div class="mobile-menu__content"> -->
  
   <ul class="mobile-menu__links">
     <li><a class="mobile-menu__links-agency mobile-menu-agency--active" href="index.html">Agencja</a></li>
@@ -39,9 +44,7 @@
         class="mobile-menu__contact-element mobile-menu__contact-element--transformation"
         href="mailto:info@devstudio.com"
       >
-        <!-- <svg width="16" height="12">
-          <use href="./images/icons.svg#icon-envelope"></use>
-        </svg> -->
+      
         info@devstudio.com</a
       >
     </li>
@@ -51,14 +54,12 @@
         class="mobile-menu__contact-element mobile-menu__contact-element--transformation"
         href="phone:+48111111111"
       >
-        <!-- <svg width="10" height="16">
-          <use href="./images/icons.svg#icon-smartphone"></use>
-        </svg> -->
+       
         +48 111 111 111</a
       >
     </li>
   </ul>
-</div>
+<!-- </div> -->
 </div>
 
 </div>
