--- a/index.html
+++ b/index.html
@@ -22,15 +22,12 @@
   </head>
 
   <body>
-
-    <div class="mobile-menu display-none">
-      <button type="button" class="mobile-menu__button">
-        <svg height="18" width="18">
-            <use href="./images/icons.svg#icon-close_mobile"></use>
-          </svg>
-      </button>
   
-<!-- <div class="mobile-menu__content"> -->
+    
+    <div class="mobile-menu">
+     
+  
+<div class="mobile-menu__content">
  
   <ul class="mobile-menu__links">
     <li><a class="mobile-menu__links-agency mobile-menu-agency--active" href="index.html">Agencja</a></li>
@@ -59,12 +56,17 @@
       >
     </li>
   </ul>
-<!-- </div> -->
+</div>
 </div>
 
 </div>
 
     <header class="header">
+      <!-- <button type="button" class="mobile-menu__button">
+        <svg height="18" width="18">
+            <use href="./images/icons.svg#icon-close_mobile"></use>
+          </svg>
+      </button> -->
       <div class="container">
         <div class="header__content">
           <a class="header__logo">
