--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 class="header__contact-element header__contact-element--transformation"
                 href="mailto:info@devstudio.com"
               >
-                <svg width="14" height="10">
+                <svg class="header__contact-icon" width="14" height="10">
                   <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
