header under construction

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
               <use href="./images/icons.svg#icon-menu_mobile_open"></use>
             </svg>
           </button>
+          <div class="header__wrapper">
           <ul class="header__links">
             <li>
               <a
@@ -127,13 +128,14 @@
                 class="header__contact-element header__contact-element--transformation"
                 href="phone:+48111111111"
               >
-                <svg width="10" height="14">
+                <svg class="header__contact-icon" width="10" height="14">
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
                 +48 111 111 111</a
               >
             </li>
           </ul>
+          </div>
         </div>
       </div>
     </header>
