work in progress

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           </div>
         </div>
 
-        <div class="container">
+        <div class="purchase__container">
           <div class="purchase__position">
             <h1 class="purchase__header">
               EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
