work in progress

--- a/index.html
+++ b/index.html
@@ -338,10 +338,15 @@
                   <p>APLIKACJE KOMPUTEROWE</p>
                 </div>
                 <img
-                  src="./images/1.jpg"
+                  src="./images/1_1x.jpg"
+                  srcset="
+    1_2x.jpg   2x,
+    1_3x.jpg   3x
+  "
                   width="370"
                   height="294"
                   alt="man hands typing on keyboard"
+                  
                 />
               </li>
 
@@ -350,7 +355,11 @@
                   <p>APLIKACJE MOBILNE</p>
                 </div>
                 <img
-                  src="./images/2.jpg"
+                  src="./images/2_2x.jpg"
+                  srcset="
+    2_2x.jpg   2x,
+    2_3x.jpg   3x
+  "
                   width="370"
                   height="294"
                   alt="woman hand holding mobile over laptop keyboard"
@@ -362,7 +371,11 @@
                   <p>ROZWIĄZANIA GRAFICZNE</p>
                 </div>
                 <img
-                  src="./images/3.jpg"
+                  src="./images/3_1x.jpg"
+                  srcset="
+                  3_2x.jpg   2x,
+                  3_3x.jpg   3x
+                "
                   width="370"
                   height="294"
                   alt="woman hands holding tablet over desk"
