work in progress

--- a/index.html
+++ b/index.html
@@ -391,9 +391,13 @@
           <div>
             <h2 class="team__header">Nasz zespół</h2>
             <ul class="team__list">
-              <li>
+              <li class="team_pic">
                 <img
-                  src="./images/4.jpg"
+                  src="./images/4_1x.jpg"
+                  srcset="
+                  4_2x.jpg   2x,
+                  4_3x.jpg   3x
+                "
                   width="270"
                   height="260"
                   alt="young bearded man with glasses in brown shirt smiling"
@@ -425,7 +429,11 @@
               </li>
               <li>
                 <img
-                  src="./images/5.jpg"
+                  src="./images/5_1x.jpg"
+                  srcset="
+                  5_2x.jpg   2x,
+                  6_3x.jpg   3x
+                "
                   width="270"
                   height="260"
                   alt="young blond hair woman with glasses smiling"
@@ -457,7 +465,11 @@
               </li>
               <li>
                 <img
-                  src="./images/6.jpg"
+                  src="./images/6_1x.jpg"
+                  srcset="
+                  6_2x.jpg   2x,
+                  6_3x.jpg   3x
+                "
                   width="270"
                   height="260"
                   alt="young man in blue shirt smiling"
@@ -489,7 +501,11 @@
               </li>
               <li>
                 <img
-                  src="./images/7.jpg"
+                  src="./images/7_1x.jpg"
+                  srcset="
+                  7_2x.jpg   2x,
+                  7_3x.jpg   3x
+                "
                   width="270"
                   height="260"
                   alt="young bearded man with glasses in black t-shirt"
