work in progress

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div>
 
   <body>
-       <header class="header">
+    <header class="header">
       <div class="container">
         <div class="header__content">
           <a class="header__logo">
@@ -94,47 +94,49 @@
             </svg>
           </button>
           <div class="header__wrapper">
-          <ul class="header__links">
-            <li>
-              <a
-                class="header__links-agency header__links-agency--active"
-                href="index.html"
-                >Agencja</a
-              >
-            </li>
-            <li>
-              <a class="header__links-portfolio" href="./portfolio.html"
-                >Portfolio</a
-              >
-            </li>
-            <li><a class="header__links-contact" href="Kontakt">Kontakt</a></li>
-          </ul>
+            <ul class="header__links">
+              <li>
+                <a
+                  class="header__links-agency header__links-agency--active"
+                  href="index.html"
+                  >Agencja</a
+                >
+              </li>
+              <li>
+                <a class="header__links-portfolio" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li>
+                <a class="header__links-contact" href="Kontakt">Kontakt</a>
+              </li>
+            </ul>
 
-          <ul class="header__contact">
-            <li>
-              <a
-                class="header__contact-element header__contact-element--transformation"
-                href="mailto:info@devstudio.com"
-              >
-                <svg class="header__contact-icon" width="14" height="10">
-                  <use href="./images/icons.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com</a
-              >
-            </li>
+            <ul class="header__contact">
+              <li>
+                <a
+                  class="header__contact-element header__contact-element--transformation"
+                  href="mailto:info@devstudio.com"
+                >
+                  <svg class="header__contact-icon" width="14" height="10">
+                    <use href="./images/icons.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com</a
+                >
+              </li>
 
-            <li>
-              <a
-                class="header__contact-element header__contact-element--transformation"
-                href="phone:+48111111111"
-              >
-                <svg class="header__contact-icon" width="10" height="14">
-                  <use href="./images/icons.svg#icon-smartphone"></use>
-                </svg>
-                +48 111 111 111</a
-              >
-            </li>
-          </ul>
+              <li>
+                <a
+                  class="header__contact-element header__contact-element--transformation"
+                  href="phone:+48111111111"
+                >
+                  <svg class="header__contact-icon" width="10" height="14">
+                    <use href="./images/icons.svg#icon-smartphone"></use>
+                  </svg>
+                  +48 111 111 111</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -338,15 +340,11 @@
                   <p>APLIKACJE KOMPUTEROWE</p>
                 </div>
                 <img
-                  src="./images/1_1x.jpg"
-                  srcset="
-    1_2x.jpg   2x,
-    1_3x.jpg   3x
-  "
+                  src="./images/1_1x_desktop.jpg"
+                  srcset="1_1x_desktop.jpg 1x, 1_2x_desktop.jpg 2x"
                   width="370"
                   height="294"
                   alt="man hands typing on keyboard"
-                  
                 />
               </li>
 
@@ -355,11 +353,8 @@
                   <p>APLIKACJE MOBILNE</p>
                 </div>
                 <img
-                  src="./images/2_2x.jpg"
-                  srcset="
-    2_2x.jpg   2x,
-    2_3x.jpg   3x
-  "
+                  src="./images/2_1x_desktop.jpg"
+                  srcset="2_1x_desktop.jpg 1x, 2_2x_desktop.jpg 2x"
                   width="370"
                   height="294"
                   alt="woman hand holding mobile over laptop keyboard"
@@ -371,11 +366,8 @@
                   <p>ROZWIĄZANIA GRAFICZNE</p>
                 </div>
                 <img
-                  src="./images/3_1x.jpg"
-                  srcset="
-                  3_2x.jpg   2x,
-                  3_3x.jpg   3x
-                "
+                  src="./images/3_1x_desktop.jpg"
+                  srcset="3_1x_desktop.jpg 1x, 3_2x_desktop.jpg 2x"
                   width="370"
                   height="294"
                   alt="woman hands holding tablet over desk"
@@ -394,10 +386,7 @@
               <li class="team_pic">
                 <img
                   src="./images/4_1x.jpg"
-                  srcset="
-                  4_1x.jpg   1x,
-                  4_2x.jpg   2x
-                "
+                  srcset="4_1x.jpg 1x, 4_2x.jpg 2x"
                   width="270"
                   height="260"
                   alt="young bearded man with glasses in brown shirt smiling"
@@ -430,10 +419,7 @@
               <li>
                 <img
                   src="./images/5_1x.jpg"
-                  srcset="
-                  5_1x.jpg   1x,
-                  5_2x.jpg   2x
-                "
+                  srcset="5_1x.jpg 1x, 5_2x.jpg 2x"
                   width="270"
                   height="260"
                   alt="young blond hair woman with glasses smiling"
@@ -466,10 +452,7 @@
               <li>
                 <img
                   src="./images/6_1x.jpg"
-                  srcset="
-                  6_2x.jpg   2x,
-                  6_3x.jpg   3x
-                "
+                  srcset="6_2x.jpg 2x, 6_3x.jpg 3x"
                   width="270"
                   height="260"
                   alt="young man in blue shirt smiling"
@@ -502,10 +485,7 @@
               <li>
                 <img
                   src="./images/7_1x.jpg"
-                  srcset="
-                  7_2x.jpg   2x,
-                  7_3x.jpg   3x
-                "
+                  srcset="7_2x.jpg 2x, 7_3x.jpg 3x"
                   width="270"
                   height="260"
                   alt="young bearded man with glasses in black t-shirt"
