--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         </div>
       </section>
 
-      <section class="team section">
+      <section class="team">
         <div class="container">
           <div>
             <h2 class="team__header">Nasz zespół</h2>
