--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </div>
       </section>
 
-      <section class="activities section">
+      <section class="activities">
         <div class="container">
           <div>
             <h2 class="activities__header">Czym się zajmujemy</h2>
