--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
         </div>
       </section>
 
-      <section class="customers section">
+      <section class="customers">
         <div class="container">
           <div>
             <h2 class="customers__header">Nasi klienci</h2>
